[style] Fix incompatibility between overflow hidden and sticky position

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -2,37 +2,16 @@
 	box-sizing: border-box;
 }
 
-html {
-	overflow-x: hidden;
-}
-
 body {
 	margin: 0;
 	font: {
 		family: "Catamaran", Arial, "Helvetica Neue", Helvetica, sans-serif;
 		size: 16px;
 	}
-	overflow-x: hidden;
 	background-color: $black;
 
 	main {
 		background-color: $black;
-	}
-}
-
-.half-part { // <section>
-	width: 50%;
-
-	&__title { // <h3>
-		text-transform: uppercase;
-		font-size: 1.875rem;
-		margin: 0;
-	}
-
-	&__text { // <p>
-		margin: {
-			top: revert;
-			bottom: 0;
-		}
+		overflow-x: hidden;
 	}
 }
