--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -7,6 +7,7 @@
 	}
 	height: calc(100vh - 3.125rem);
 	display: flex;
+	overflow-x: hidden;
 
 	@media #{$mq_w450_up} {
 		height: calc(100vh - 3.75rem);
